Updated title tag

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
 
     <body>
         <div class="container, col s3">
-            <h1>COLORS</h1>
+            <h1>Names</h1>
             <div class="s4"></div>
             <div class="red" style="width: 700px; text-align: top;" "z-depth-5">
                 <table>
